add helix decoding function to audioPlayer

--- a/TPFworkspace/flashI2S/workspace/frdmk64f_edma_scatter_gather/.cproject
+++ b/TPFworkspace/flashI2S/workspace/frdmk64f_edma_scatter_gather/.cproject
@@ -727,4 +727,5 @@
 &lt;/TargetConfig&gt;</projectStorage>
 	</storageModule>
 	<storageModule moduleId="org.eclipse.cdt.make.core.buildtargets"/>
+	<storageModule moduleId="refreshScope"/>
 </cproject>
