--- a/TPFworkspace/sensores/workspace/sensoresMedicos/.cproject
+++ b/TPFworkspace/sensores/workspace/sensoresMedicos/.cproject
@@ -634,4 +634,5 @@
 &lt;/TargetConfig&gt;</projectStorage>
 	</storageModule>
 	<storageModule moduleId="org.eclipse.cdt.make.core.buildtargets"/>
+	<storageModule moduleId="refreshScope"/>
 </cproject>
