--- a/TPFworkspace/sensores/workspace/.mcuxpressoide_packages_support/MK64FN1M0xxx12_support/info.properties
+++ b/TPFworkspace/sensores/workspace/.mcuxpressoide_packages_support/MK64FN1M0xxx12_support/info.properties
@@ -1,5 +1,5 @@
 #MCUXpresso IDE part support
-#Sun Jan 17 15:22:28 ART 2021
+#Mon Feb 01 18:30:24 UYT 2021
 device.version=1.0.0
 device.id=MK64FN1M0xxx12
 sdk.version=2.8.2
